src/test/deca/context/invalid/created/rule3.43/principalprog.deca
// Résultat erreur:
//    Utilisation de 'This' dans le programme principal (règle 3.43)
//
// Description:
//    Tests de programme incorrect contextuellement ('This' utilisé hors d'une classe)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class MaClasse {
    int maMethode() {
        return 5;
    }
}

{
    MaClasse obj = This.maMethode();
}
